# ccORM

./: .gitignore  CMakeLists.txt  LICENSE  README-zh_CN.md  README.md  any.db  build_linux.sh  conanfile.bat  main.cpp  module.hh  module.hpp  o2o.cc
cmake/: CompilerOptions.cmake  FindMYSQL.cmake  FindPostgreSQL.cmake  FindSQLite3.cmake
example/: generic_sql_tests.hh  pureSql.cc
src/: Sql.hh  Sql.hpp  Table.hh  Table.hpp  ccORM.hh  generic_sql_tests.hh  json.hh  json.hpp  macros.hh  macros.hpp  main.cc
src/base/: Initalization.hh  Initalization.hpp  macros.hpp  s2o.hh  s2o.hpp  so2s.hh  so2s.hpp  std_s.hh  std_s.hpp
src/utils/: str.h  str.hh  text.hh  text.hpp  varchar.hpp
